--- a/index.html
+++ b/index.html
@@ -1091,5 +1091,7 @@ input.blank.tiny{ width:58px; } /* slightly narrower */
       setProblem(98,72);
     });
   </script>
+  <script src="https://limkimsze-maker.github.io/assets/nav.js"></script>
 </body>
 </html>
+
